--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/spritesheet-simplify/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spritesheet Simplify</title>
+    <script type="module" crossorigin src="/spritesheet-simplify/assets/index.b554d9f4.js"></script>
+    <link rel="stylesheet" href="/spritesheet-simplify/assets/index.194c3b23.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    
   </body>
 </html>
