--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="Spritesheet Generator, Texture Packer Alternative, Spritesheet, Spritesheet Simplify, spritesheet simplify, Spritesheet Merge"
+    />
+    <meta name="author" content="Al Jimson Megriño" key="author" />
+    <meta
+      name="description"
+      content="A Spritesheet Generator alternative for Texture Packer, allows you to merge sprites and generate it as a Spritesheet with animation preview feature. It allows you to view the animation capability of your selected sprites and view it with your desired animation speed."
+    />
     <title>Spritesheet Simplify</title>
     <link rel="stylesheet" href="./src/tailwindcss/tailwind.css" />
   </head>
