--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       name="description"
       content="A Spritesheet Generator alternative for Texture Packer, allows you to merge sprites and generate it as a Spritesheet with animation preview feature. It allows you to view the animation capability of your selected sprites and view it with your desired animation speed."
     />
+    <meta
+      name="google-site-verification"
+      content="sqLua5xTWNYfoKBWrkrfDqSDA0iUMbFeUauMlUHGW4A"
+    />
     <title>Spritesheet Simplify</title>
     <link rel="stylesheet" href="./src/tailwindcss/tailwind.css" />
   </head>
